src/tests/snapshots/synoik__tests__window_opening__check_target_size@omT-ofT-dwF1000-dhF500-b-wfsAU.snap
---
source: src/tests/window_opening.rs
description: "open maximized: true\nopen floating: true\ndefault column width: F1000\ndefault window height: F500\nborder on\nwant fullscreen: AU"
expression: snapshot
---
initial configure:
size: 1000 × 500, bounds: 1272 × 712, states: []

post-map configures:
size: 1000 × 500, bounds: 1272 × 712, states: []
size: 1000 × 500, bounds: 1272 × 712, states: [Activated]
